@@ -3591,21 +3591,6 @@ iterative_hash_type_name (tree type, hashval_t v)
   if (!name)
     return v;
   gcc_assert (TREE_CODE (name) == IDENTIFIER_NODE);
-  /* Do not hash names of anonymous unions.  At least the C++ FE insists
-     to have a non-NULL TYPE_NAME for them.  See cp/cp-tree.h for all
-     the glory.  */
-#ifndef NO_DOT_IN_LABEL
-  if (IDENTIFIER_POINTER (name)[0] == '.')
-    return v;
-#else
-#ifndef NO_DOLLAR_IN_LABEL
-  if (IDENTIFIER_POINTER (name)[0] == '$')
-    return v;
-#else
-  if (!strncmp (IDENTIFIER_POINTER (name), "__anon_", sizeof ("__anon_") - 1))
-    return v;
-#endif
-#endif
   return iterative_hash_object (IDENTIFIER_HASH_VALUE (name), v);
 }
 
